@@ -1,0 +1,28 @@
+#!/usr/bin/env python
+"""
+    ilenia.py
+    Mon Sep 12 19:18:19 2005
+    Copyright 2005 - 2006 Coviello Giuseppe
+    immigrant@email.it
+    
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+    
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Library General Public License for more details.
+    
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+"""
+
+import sys
+sys.path.pop(0)
+from ilenia.ilenia import Ilenia
+from ilenia.lib.option import IleniaOptions
+
+Ilenia(IleniaOptions().parse())
